--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contect us">Contect us</a>
+                            <a class="nav-link" href="#contact us">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -94,6 +94,147 @@
             </a>
         </div>
     </div>
+
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat1">
+                    <h1>Watch</h1>
+                    <img src="images/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class=" d-flex justify-content-between align-items-center cat2">
+                    <h1>Bag</h1>
+                    <img src="images/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat3">
+                    <h1>Shoes</h1>
+                    <img src="images/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit est
+                            laboriosam distinctio deserunt deleniti error commodi voluptate. Necessitatibus consequatur
+                            praesentium enim laboriosam incidunt, eaque maxime amet laborum facere, iste fugiat?</p>
+                        <h3>$120</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike 320 </h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, harum
+                            officiis iste ducimus illum, repellendus accusamus et itaque sint totam maiores, eum dolor.
+                            Veritatis, asperiores saepe quaerat animi quisquam illo?</p>
+                        <h3>$320</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Red Max</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ipsa quam
+                            harum reprehenderit fugiat? Iste doloremque illum asperiores eius ut nulla! Ducimus nulla
+                            consequuntur hic enim qui maiores magnam commodi.</p>
+                        <h3>$350</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container Backpack" id="backpack">
+        <h3>Backpacks</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Red Backpack</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptatibus
+                            distinctio adipisci fuga sequi porro. Sunt inventore nesciunt quo esse. Dolores qui saepe
+                            cum quo placeat. Labore reiciendis vitae distinctio?</p>
+                        <h3>$125</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Blue Backpack</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quaerat
+                            saepe magni nobis architecto qui commodi officiis omnis dolor, aliquid aliquam rem doloribus
+                            culpa libero iusto, reprehenderit dolorum animi. Animi..</p>
+                        <h3>$320</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Black Backpack</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus
+                            velit cumque iusto repellendus quo numquam fugiat ratione molestias sunt perspiciatis enim
+                            dolore nostrum rem, eum voluptatem earum aliquid blanditiis ex.</p>
+                        <h3>$170</h3>
+                    </div>
+                    <div class="card-footer">
+                        <button class="buy-now">Buy Now>></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container d-flex align-items-center justify-content-center orange-bg" id="contact-us">
+        <div>
+            <h3>LET'S TOUCH IN TOUCH</h3>
+            <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+            <input class="form-control" type="text">
+            <button class="buy-now">Submit</button>
+        </div>
+    </div>
+
+    <footer>
+        <p> ©Panda commerce. All rights reserved,</p>
+    </footer>
+
+
+
 
 
 
